# dioxus-wgpu-experiments

./: Cargo.toml  Dioxus.toml  README.md
client/: Cargo.toml  Dioxus.toml
client/assets/: server_index.html
client/src/: decimate.rs  main.rs  render.rs  resize.rs  segmented_line.wgsl
client/src/render/: data_cache.rs  scale.rs
server/: Cargo.toml  build.rs
server/src/: main.rs  resample.rs
shared/src/: lib.rs  resample.rs  types.rs
src/: main.rs  render.rs  segmented_line.wgsl
