[package]
name = "dx-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dioxus = "0.4.0"
# dioxus-helmet = "0.2.4"
dioxus-web = "0.4.0"
futures-util = "0.3.29"
fxhash = "0.2.1"
js-sys = "0.3.65"
lazy_static = "1.4.0"
log = "0.4.20"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.64", features = ["HtmlHeadElement"] }
wgpu = { version = "0.18.0", features = ["webgl"] }
winit = "0.29.3"
