[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
shared = { path = "../shared" }

[build-dependencies]
client = { path = "../client", artifact = "bin", target = "wasm32-unknown-unknown" }
wasm-bindgen-cli-support = { version = "0.2" }
quote = "1.0.35"
